# pmtrendviz

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  compose.yml  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  start_backend.sh  start_frontend.sh
.github/workflows/: pre-commit.yml  pytest.yml
docs/: cli.md  install_node.md  minimal_cli_example.md  minimal_python_example.md
elasticsearch/: es.env
pmtrendviz-backend/src/: main.py
pmtrendviz-backend/src/app/routers/: models.py  predict.py  train.py
pmtrendviz-frontend/: README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
pmtrendviz-frontend/src/: hooks.server.js
pmtrendviz-frontend/src/components/: GraphdataStorejs.js  Searchbar.svelte  TrainingForm.svelte  nav.svelte
pmtrendviz-frontend/src/routes/: +page.server.js  +page.svelte
pmtrendviz-frontend/src/routes/import/: +page.svelte
src/pmtrendviz/: __init__.py  __main__.py  utils.py
src/pmtrendviz/api/: api.py
src/pmtrendviz/app/: trend.py
src/pmtrendviz/cli/: cli.py  parse.py
src/pmtrendviz/import_pipeline/: download.py  end_to_end.py  extract.py  index.py
src/pmtrendviz/list/: list.py
src/pmtrendviz/models/: args.py  factory.py  manager.py
src/pmtrendviz/precompute/: precompute.py
src/pmtrendviz/train/: args.py  data.py  preprocessing.py  train.py
tests/: conftest.py  test_init.py  test_utils.py
tests/models/manager/: test_bertopic_manager.py  test_simple_sklearn_pipeline_manager.py  test_spacy_sklearn_pipeline_manager.py
(+4 files in other folders)
